class Cinema:
    def __init__(self, id, nome, cidade, estado, endereco, capacidade):
        self.id = id
        self.nome = nome
        self.cidade = cidade
        self.estado = estado
        self.endereco = endereco
        self.capacidade = capacidade