class Filme:
    def __init__(self, id, titulo, duracao, classificacao):
        self.id = id
        self.titulo = titulo
        self.duracao = duracao
        self.classificacao = classificacao