class Sessao:
    def __init__(self, id, filme_id, cinema_id, data, horario, publico):
        self.id = id
        self.filme_id = filme_id
        self.cinema_id = cinema_id
        self.data = data
        self.horario = horario
        self.publico = publico